Speaker mvc setup
Speaker model, routes, and controllers

--- a/Views/Layouts/layout.ejs
+++ b/Views/Layouts/layout.ejs
@@ -6,6 +6,9 @@
     <title>Conference</title>
 </head>
 <body>
+
+    <%- include('../Partials/navbar.ejs') %> 
+
     <%- body %> 
 </body>
 </html>
